--- a/nicepage.css
+++ b/nicepage.css
@@ -1,8 +1,4 @@
-/*begin-commonstyles library*//*!
- * froala_editor v3.2.3 (https://www.froala.com/wysiwyg-editor)
- * License https://froala.com/wysiwyg-editor/terms/
- * Copyright 2014-2020 Froala Labs
- */
+
 
 .fr-clearfix::after {
   clear: both;
@@ -93,27 +89,7 @@
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow: visible; }
-/*.fr-view[dir="rtl"] blockquote {
-  border-left: none;
-  border-right: solid 2px #5E35B1;
-  margin-right: 0;
-  padding-right: 5px;
-  padding-left: 0; }
-  .fr-view[dir="rtl"] blockquote blockquote {
-    border-color: #00BCD4; }
-    .fr-view[dir="rtl"] blockquote blockquote blockquote {
-      border-color: #43A047; }
-.fr-view blockquote {
-  border-left: solid 2px #5E35B1;
-  margin-left: 0;
-  padding-left: 5px;
-  color: #5E35B1; }
-  .fr-view blockquote blockquote {
-    border-color: #00BCD4;
-    color: #00BCD4; }
-    .fr-view blockquote blockquote blockquote {
-      border-color: #43A047;
-      color: #43A047; }*/
+
   .fr-view span.fr-emoticon {
     font-weight: normal;
     font-family: "Apple Color Emoji","Segoe UI Emoji","NotoColorEmoji","Segoe UI Symbol","Android Emoji","EmojiSymbols";
@@ -290,9 +266,7 @@
   .fr-view ul, .fr-view ol {
     list-style-position: inside; }
 
-/**
- * Image style.
- */
+
 a.fr-view.fr-strong {
   font-weight: 700; }
 a.fr-view.fr-green {
@@ -360,15 +334,8 @@ span.fr-img-caption.fr-view {
       float: right;
       margin: 5px 0 5px 5px;
       max-width: calc(100% - 5px); }
-/*end-commonstyles library*//*begin-commonstyles library*/@charset "UTF-8";
+/@charset "UTF-8";
 
-/*!
- * animate.css -https://daneden.github.io/animate.css/
- * Version - 3.7.2
- * Licensed under the MIT license - http://opensource.org/licenses/MIT
- *
- * Copyright (c) 2019 Daniel Eden
- */
 
 @-webkit-keyframes bounce {
   from,
@@ -474,7 +441,7 @@ span.fr-img-caption.fr-view {
   animation-name: flash;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+
 
 @-webkit-keyframes pulse {
   from {
@@ -852,7 +819,7 @@ span.fr-img-caption.fr-view {
   animation-name: tada;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+
 
 @-webkit-keyframes wobble {
   from {
@@ -3210,7 +3177,7 @@ span.fr-img-caption.fr-view {
   animation-name: jackInTheBox;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+
 
 @-webkit-keyframes rollIn {
   from {
@@ -3245,7 +3212,7 @@ span.fr-img-caption.fr-view {
   animation-name: rollIn;
 }
 
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+
 
 @-webkit-keyframes rollOut {
   from {
@@ -3985,7 +3952,7 @@ span.fr-img-caption.fr-view {
     animation-iteration-count: 1 !important;
   }
 }
-/*end-commonstyles library*//*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -4171,20 +4138,7 @@ ul,
 ol {
   padding-left: 20px;
 }
-/* Fade effect */
-/* Over effect */
-/* Slide effect */
-/* Over and Slide effect */
-/* Flip Left effect */
-/* Flip Right effect */
-/* Flip Top effect */
-/* Flip Bottom effect */
-/* Wobble Left effect */
-/* Wobble Right effect */
-/* Wobble top effect */
-/* Wobble bottom effect */
-/* Zoom and Rotate Effects */
-/* Utility */
+
 .u-over-slide {
   position: absolute;
   left: 0;
@@ -17704,10 +17658,7 @@ blockquote .small:before {
   left: 0;
   top: 0;
 }
-/*
-	Error message appears when image is not loaded
-	(JS option errorMsg controls markup)
-*/
+
 .pswp__error-msg {
   position: absolute;
   left: 0;
@@ -17759,28 +17710,7 @@ blockquote .small:before {
 .pswp__previews::-webkit-scrollbar {
   display: none;
 }
-/* end previews  */
-/*end-commonstyles photoswipe*/
-/*begin-commonstyles photoswipe-default*/
-/*! PhotoSwipe Default UI CSS by Dmitry Semenov | photoswipe.com | MIT license */
-/*
 
-	Contents:
-
-	1. Buttons
-	2. Share modal and links
-	3. Index indicator ("1 of X" counter)
-	4. Caption
-	5. Loading indicator
-	6. Additional styles (root element, top bar, idle state, hidden state, etc.)
-
-*/
-/*
-
-	1. Buttons
-
- */
-/* <button> css reset */
 .pswp__button {
   width: 44px;
   height: 44px;
@@ -18053,13 +17983,7 @@ a.pswp__share--download:hover {
 .pswp__caption--fake {
   visibility: hidden;
 }
-/*
 
-	5. Loading indicator (preloader)
-
-	You can play with it here - http://codepen.io/dimsemenov/pen/yyBWoR
-
- */
 .pswp__preloader {
   width: 44px;
   height: 44px;
@@ -18104,10 +18028,7 @@ a.pswp__share--download:hover {
   margin: 0;
 }
 .pswp--css_animation .pswp__preloader__cut {
-  /*
-			The idea of animating inner circle is based on Polymer ("material") loading indicator
-			 by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html
-		*/
+
   position: relative;
   width: 7px;
   height: 14px;
